--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -105,4 +105,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: Artifacts
-        path: ${{ GITHUB_WORKSPACE }}+"\"+ ${{env.OutputPath }}
+        path: ${{ env.GITHUB_WORKSPACE }}+"\"+ ${{env.OutputPath }}
