--- a/Symlinker/packages.config
+++ b/Symlinker/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ILRepack" version="2.1.0-beta1" targetFramework="net48" />
+  <package id="ILRepack.Lib.MSBuild.Task" version="2.0.18.2" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="SymbolicLinkSupport" version="1.2.0" targetFramework="net48" />
 </packages>
